<resources>
    <string name="app_name">GeoProj</string>


    <string name="action_settings">Settings</string>
    <string name="tv_url_for_dialog">Enter the URL of the image</string>
    <string name="btn_koordinat">Get the coordinates</string>
    <string name="text_btn_map">Update</string>
    <string name="title_activity_all_photo">AllPhotoActivity</string>
    <string name="btn_open">all pictures</string>
    <string name="btn_map_all">all time</string>
    <string name="btn_map_day">this day</string>
    <string name="btn_gallery">Upload a picture from the gallery</string>
    <string name="btn_url">Upload a picture from the url</string>
    <string name="title_activity_show">ShowActivity</string>
    <string name="view_navigation_open">open</string>
    <string name="view_navigation_close">clode</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_ready">готово</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="ic_gallery">ic_gallery</string>
    <string name="ic_camera">ic_camera</string>
    <string name="im_btn_gallery">btn_gallery</string>
    <string name="im_btn_map">btn_map</string>
    <string name="im_btn_link">btn_link</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="btn_open_gallery">OPEN GALLERY</string>
</resources>
