<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_gallery"
        android:id="@+id/btn_gallery"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30sp"
        android:layout_marginBottom="10sp"
        android:background="@drawable/sel" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_url"
        android:id="@+id/btn_url"
        android:layout_below="@+id/btn_gallery"
        android:layout_centerHorizontal="true"
        android:background="@drawable/sel" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_url"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40sp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:background="@color/distance"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/tvLocationLatitude"
            android:layout_marginTop="15dp"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/tvLocationLongitude"
            android:layout_marginTop="20sp"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_koordinat"
        android:id="@+id/getCoordinates"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="25sp"
        android:layout_marginRight="20sp"
        android:background="@drawable/sel" />


</RelativeLayout>
